# TzDraft

./: .dockerignore  .easignore  .env.example  .gitignore  .npmrc  Dockerfile  app.config.js  docker-compose.prod.yml  docker-compose.yml  eas.json  full_diff.txt  login-data.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-login-debug.js  test-login-local.js  test-login.js  uncommitted.patch
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy.yml
apps/mobile/: .env.development  .env.production  .env.staging  PHASE4_PLAN.md  app.config.ts  app.json  eas.json  metro.config.js  metro.config.js.bak  package.json  tailwind.config.js
backend/: .env.example  DATABASE_ADAPTER_INFO.md  DATABASE_TEST_SUCCESS.md  Dockerfile  ENV_TEST_RESULTS.md  README.md  check-db.ts  check-duplicates.ts  diff.js  eslint.config.mjs  fix-campaigns.ts  inspect_user.sql  jest.config.cjs  jest.config.js  jest.setup.js  migrate-leagues-to-tournaments.ts  migrate_leagues.js  migration.sql  migration_output.txt  package-lock.json  package.json  pnpm-lock.yaml  seed-users.js  seed-users.js.map  seed-users.ts  temp_pkg.json  test-ws.js  test_result.txt  tsconfig.build.tsbuildinfo  tsconfig.json  verify-game-creation.js
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/prisma/: README.md  check-turn.sql  schema.prisma  seed-ai.ts  seed-test-users.sql
backend/scratch/: check-db.js  check-zombie-games.js
backend/scripts/: build-sidra.js  check-columns.ts  check-duplicates.ts  clear-stuck-games.ts  db-diagnostic.ts  deep-clean-games.ts  merge-schemas.js  safe-migrate-duration.ts  test-db.js  test-env.js
backend/src/: app.module.ts  instrument.ts  main.ts
backend/test/: game-api.e2e-spec.ts  jest-e2e.json  matchmaking.e2e-spec.ts
docs/: CAKE_CODE_AUDIT_REPORT.md  CAKE_INTEGRATION_EVALUATION_AND_ROADMAP.md  PROJECT_MAP.md  drafti_engine_based_architecture_8_x_8_tanzania_drafti.md  drafti_engine_move_translation_spec_cake_↔_8_8_tanzania_drafti.md  drafti_optimized_capture_finding_algorithm.md  drafti_policy_and_privacy_guidelines.md  drafti_rule_derived_test_cases.md  formal_tanzania_drafti_rule_specification_8_8.md  oauth2-jwt-implementation-guide.md
docs/Auth_system/: oauth2-cookie-vercel-deploy.md  oauth2-jwt-implementation-guide.md
docs/README/: CAKE_ENGINE_IMPLEMENTATION.md  MKAGUZI_V0_1_ENGINE_PLAN.md  NESTJS_DDD_folder_structure.md  SIDRA_ENGINE_INTEGRATION.md  drafti_clock_and_time_control_mechanics.md  drafti_database_schema_for_games_moves.md  drafti_frontend_plan_chess.md  drafti_game_domain_class_diagram_8_8_tanzania_drafti.md  drafti_move_validation_algorithm_exact_steps.md  drafti_official_game_policy.md  drafti_project_overview.md  drafti_realtime_sync_protocol_web_socket_flow.md  drafti_technology_stack_ddd_integration.md  formal_tanzania_drafti_rule_specification_8_8.md
docs/api/: api_endpoints.md  postman_quick_start.md  postman_test_scripts.md  test_scenarios.md  troubleshooting.md  vps-hetzner-deploy.md
docs/architecture/: pvp-realtime-architecture.md  redis-optimization.md
docs/auth/: security.md
docs/chat/: VOICE_CHAT_UPGRADE_PLAN_2026-03-15.md  Voice_Chat_Analysis.docx
docs/costs/: COST-EVALUATION.md
docs/debugging-issues/: auth-body-parsing-render.md  otp-sms-configuration.md  production-localhost-redirect.md  websocket-nginx-cors-fix.md
docs/engine adaptation/: Engine_Adaptation_Decision_Document(4).docx
docs/friend/: COMPLETE_CHECKLIST.md  DEPLOY_NOW.md  FILE_INVENTORY.md  FRIEND_PAGE_FRONTEND.md  FRIEND_SYSTEM.md  FRIEND_SYSTEM_FILES.md  FRIEND_SYSTEM_IMPLEMENTATION_SUMMARY.md  (+7 more)
engines/core/: CMakeLists.txt
engines/core/src/: main.cpp
engines/core/src/board/: fen.cpp  fen.h  hash.cpp  hash.h  makemove.cpp  makemove.h  position.cpp  position.h
engines/core/src/book/: book.cpp  book.h
engines/core/src/core/: bitboard.cpp  bitboard.h  constants.h  square_map.cpp  square_map.h  types.h
engines/core/src/endgame/: bitbase.cpp  bitbase.h  solver.cpp  solver.h
engines/core/src/eval/: eval.cpp  eval.h  king_safety.cpp  king_safety.h  material.cpp  material.h  mobility.cpp  mobility.h  patterns.cpp  patterns.h  structure.cpp  structure.h  tempo.cpp  tempo.h
engines/core/src/protocol/: ipc.cpp  ipc.h  messages.h
engines/core/src/rules/: capturegen.cpp  capturegen.h  movegen.cpp  movegen.h  promotion.cpp  promotion.h  repetition.cpp  repetition.h  variant.h
engines/core/src/search/: history.cpp  history.h  killers.cpp  killers.h  ordering.cpp  ordering.h  qsearch.cpp  qsearch.h  search.cpp  search.h  time.cpp  time.h  tt.cpp  tt.h
engines/core/src/wasm/: wasm_api.cpp
engines/core/tests/eval/: promotion_orientation.cpp
engines/core/tests/perft/: perft.cpp
engines/core/tests/rules/: capture_regression.cpp  draw_regression.cpp
engines/core/tests/stability/: score_stability.cpp
engines/core/tuning/: gauntlet.py  gauntlet.sh  generate_gauntlet.cpp  texel_tune.py
engines/sidra/: Board.cpp  CMakeLists.txt  Checkers.h  ED.cpp  EdAccess.h  Evaluate.cpp  Generator.cpp  Move.cpp  README_TZD.md  Search.cpp  SiDra.dsk  SiDra.sln  SiDra.vcproj  SiDra.vcxproj  SiDra.vcxproj.filters  SidraEngine.cpp  Time.cpp  UpgradeLog.htm  Utils.cpp  build.sh  build_sidra.bat  build_sidra.ps1  build_sidra_auto.bat  build_sidra_dll.bat  export.def  main.cpp
engines/sidra/Backup/: SiDra.sln
engines/sidra/Backup2/: SiDra.sln
engines/sidra/SiDra/x64/Release/: SiDra.dll.recipe  SiDra.iobj  SiDra.ipdb
engines/sidra/SiDra/x64/Release/SiDra.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SiDra.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
engines/sidra/cli/: README.md  build_cli.bat  sidra-cli.cpp
engines/sidra/x64/Release/: SiDra.exp  SiDra.lib
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  tsconfig.json
scripts/: backup-db.sh
tasks/: implementation_plan.md  task.md
(+5147 files in other folders)
